# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.552 2005/12/28 04:44:18 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  27 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/html/*:
  converted showclients, load/saveprofile

  26 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  exclude packages already in chroot vdb from binary deplist
  chroot to use best_version for chroot's vdb
  src/runtimedeps.py:
  accept ROOT via commandline instead of env

  25 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/runtimedeps.py:
  remove passing of ROOT
  src/GLIPortage.py:
  modify get_deps() to get deptree for each package and merge into final list
  remove depgraph class
  add debugging code to get_deps()
  src/GLIArchitectureTemplate.py:
  combine code for GRP/compile in install_packages() into one block
  debugging code in install_packages()

  24 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/runtimedeps.py:
  initial commit
  src/GLIPortage.py:
  use separate script for GRP deps
  remove calls to portage module

  23 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  initial commit
  move some of portage function from GLIAT
  flipped around a few function args
  src/GLIArchitectureTemplate.py:
  revamp install_packages() for new GLIPortage

  21 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  extract /usr/livecd/metadata.tar.bz2 to chroot if it exists

  20 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  wrap generated code in a class to isolate it a bit better
  302 redirects work
  don't use cgi.escape() for <% %>
  src/net/server/html/webgli/*:
  load/save profile
  src/GLIUtility.py:
  change /sbin/lspci to just lspci

  18 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py: