@@ -44,7 +44,7 @@ class Installer:
                   { 'text': _('Daemons'), 'module': __import__("Daemons") },
                   { 'text': _('Extra Packages'), 'module': __import__("ExtraPackages") },
                   { 'text': _('Startup Services'), 'module': __import__("StartupServices") },
-                  { 'text': _('rc.conf'), 'module': __import__("RcDotConf") },
+                  { 'text': _('Rc.conf'), 'module': __import__("RcDotConf") },
                   { 'text': _('Users'), 'module': __import__("Users") },
                   { 'text': _('Review'), 'module': __import__("InstallSummary") }
                 ]
