@@ -1,9 +1,17 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.552 2005/12/28 04:44:18 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.553 2005/12/31 23:29:14 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  31 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIArchitectureTemplate.py:
+  remove add_pkg_to_world() and copy_pkg_to_chroot()
+  src/GLIPortage.py:
+  copy_pkg_to_chroot() chroot's to run ebuild is use_root=False
+  src/GLIUtility.py:
+  added get_keymaps()
 
   27 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/html/*:
